[package]
name = "crslmnl"
version = "0.1.0"
authors = ["Ken-ichirou MATSUZAWA <chamas@h4.dion.ne.jp>"]
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
time = "0.1"
mio = "0.6"
# epoll = "2.1"
epoll = { path = "../epoll" }

[features]
default = ["mnl-gt-1_0_4"]
mnl-gt-1_0_4 = []
